--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <input type="search" placeholder="search for teahost, teapot, and tea">
 </div>
 <div class="create">
-    <label for="create-post">Create</label>
+    <label class="btn btn-primary" for="create-post">Create</label>
     <div class="profile-picture">
         <img src="./images/profile-20.jpg">
     </div>
