--- a/index.html
+++ b/index.html
@@ -7,21 +7,42 @@
     </head>
     <body>
         <nav>
- <div class="container"></div>
-   <h2 class="logo">
-       teaBook
-   </h2>
-   <div class="search-bar">
-       <i class="uil uil-search"></i>
-       <input type="search" placeholder="search for teahost, teapot, and tea">
-</div>
-<div class="create">
-    <label class="btn btn-primary" for="create-post">Create</label>
-    <div class="profile-picture">
-        <img src="./images/profile-20.jpg">
-    </div>
-</div>
+            <div class="container"></div>
+            <h2 class="logo">
+                TeaBook
+            </h2>
+            <div class="search-bar">
+                <i class="uil uil-search"></i>
+                <input type="search" placeholder="search for teahost, teapot, and tea">
+            </div>
+            <div class="create">
+                <label class="btn btn-primary" for="create-post">Create</label>
+                <div class="profile-picture">
+                    <img src="./images/profile-20.jpg">
+                </div>
+            </div>
         </nav>
-    <script src="index.js"></script>
+        <script src="index.js"></script>
+        <!-----------------------------MAIN-------------------------------->
+        <main>
+            <div class="container">
+                <!--------------------LEFT--------------------->
+                <div class="left">
+                    <a class="profile">
+                        <div class="profile-picture">
+                            <img src="./images/profile-1.jpg">
+                        </div>
+                    </a>
+                </div>
+                <!--------------------MIDDLE---------------------->
+                <div class="middle">
+
+                </div>
+                <!--------------------RIGHT-------------------------->
+                <div class="right">
+
+                </div>
+            </div>
+        </main>
     </body>
-</html>
+    </html>
